Various fixes
Fixed interval overlapping, rating bar colors and added a refresh button

--- a/index.css
+++ b/index.css
@@ -198,3 +198,11 @@ label{
 #settings-button-container{
   width: fit-content;
 } 
+
+#refresh{
+    background-color: transparent;
+    border: none;
+    color: white;
+    font-size: 1.2rem;
+    cursor: pointer;
+}
